--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -30,14 +30,79 @@
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/fonts/fontawesome/fontawesome.css" />
         <link rel="stylesheet" href="/styles/lib/base.css" />
+        <style>
+            .preload-screen{
+                transition: opacity .1s ease-in-out;
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: 99999999;
+                width: 100vw;
+                height: 100vh;
+                background-color: #fafafa;
+                color: #b10438;
+            }
+            .preload-screen.hidden{
+                opacity: 0;
+            }
+            .preload-screen.removed{
+                display: none
+            }
+            .preload-screen .center-wrapper{
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                text-align: center;
+            }
+            .preload-screen .center-wrapper .fa{
+                font-size: 2rem;
+                margin-bottom: 1rem;
+                -webkit-animation: fa-spin-preload 1.5s infinite linear;
+		        animation: fa-spin-preload 1.5s infinite linear;
+            }
+            @-webkit-keyframes fa-spin-preload {
+                0% {
+                    -webkit-transform: rotate(0deg);
+                    transform: rotate(0deg);
+                }
+                100% {
+                    -webkit-transform: rotate(359deg);
+                    transform: rotate(359deg);
+                }
+            }
+        </style>
     {{/block}}
 
     {{#block "scripts"}}
         <script src="/scripts/all.js" type="text/javascript" defer></script>
+        <script>
+            window.addEventListener("load", function(e) {
+                const loader = document.querySelector(".preload-screen");
+                loader.classList.add("hidden");
+                var delPS = setInterval(function(){
+                    const loader = document.querySelector(".preload-screen")
+                    loader.classList.add("removed");
+                    //loader.parentNode.removeChild(loader); //remove node in ie6+ compatible way
+                    clearInterval(delPS);
+                },100);
+            });
+             window.addEventListener("beforeunload", function(e){
+                 const loaderClassList = document.querySelector(".preload-screen").classList;
+                 loaderClassList.remove("removed");
+                 loaderClassList.remove("hidden");
+             })
+        </script>
     {{/block}}
 
 </head>
 <body {{#if inline}}class="window-inline"{{/if}}>
+    <div class="preload-screen">
+        <div class="center-wrapper">
+            <i class="fa fa-spinner" aria-hidden="true"></i>
+            <p>laden...</p>
+        </div>
+    </div>
     {{#block "body"}}{{/block}}
 
     {{#embed "lib/piwik"}}{{/embed}}
