Updated video player, fixed hls as default

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -39,16 +39,17 @@
                                       }
                                     ],
                                     "language": "de",
-                                    "theme" : "light-green",
+                                    "theme" : "dark-orange",
                                     "videoAlignment" : "height",
                                     "initialState": {
                                       "volume": 0.75
                                     },
                                     "videoPreload": false,
                                     "userPreferences" : {
-                                      "quality" : "sd",
+                                      "quality" : "hls",
                                       "playbackRate" : 1.0
-                                    }
+                                    },
+                                    "slides": []
                                 }'>
                             </video-player>
                             
@@ -85,16 +86,17 @@
                                       }
                                     ],
                                     "language": "de",
-                                    "theme" : "light-green",
+                                    "theme" : "dark-orange",
                                     "videoAlignment" : "height",
                                     "initialState": {
                                       "volume": 0.75
                                     },
                                     "videoPreload": false,
                                     "userPreferences" : {
-                                      "quality" : "sd",
+                                      "quality" : "hls",
                                       "playbackRate" : 1.0
-                                    }
+                                    },
+                                    "slides": []
                                 }'>
                             </video-player>
                             
