--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -42,12 +42,12 @@
                                     "theme" : "dark-orange",
                                     "videoAlignment" : "height",
                                     "initialState": {
-                                      "volume": 0.75
+                                      "volume": 0.75,
+                                      "quality" : "hls",
+                                      "playbackRate" : 1.0
                                     },
                                     "videoPreload": false,
                                     "userPreferences" : {
-                                      "quality" : "hls",
-                                      "playbackRate" : 1.0
                                     },
                                     "slides": []
                                 }'>
@@ -89,12 +89,12 @@
                                     "theme" : "dark-orange",
                                     "videoAlignment" : "height",
                                     "initialState": {
-                                      "volume": 0.75
+                                      "volume": 0.75,
+                                      "quality" : "hls",
+                                      "playbackRate" : 1.0
                                     },
                                     "videoPreload": false,
                                     "userPreferences" : {
-                                      "quality" : "hls",
-                                      "playbackRate" : 1.0
                                     },
                                     "slides": []
                                 }'>
