Player update, do not load font

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -39,7 +39,8 @@
                                       }
                                     ],
                                     "language": "de",
-                                    "theme" : "dark-orange",
+                                    "theme" : "dark-red",
+                                    "loadFontAwesome" : false,
                                     "videoAlignment" : "height",
                                     "initialState": {
                                       "volume": 0.75,
@@ -86,7 +87,8 @@
                                       }
                                     ],
                                     "language": "de",
-                                    "theme" : "dark-orange",
+                                    "theme" : "dark-red",
+                                    "loadFontAwesome" : false,
                                     "videoAlignment" : "height",
                                     "initialState": {
                                       "volume": 0.75,
