--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -39,7 +39,7 @@
                 z-index: 99999999;
                 width: 100vw;
                 height: 100vh;
-                background-color: #fafafa;
+                background-color: rgba(250,250,250,.9);
                 color: #b10438;
             }
             .preload-screen.hidden{
@@ -58,10 +58,10 @@
             .preload-screen .center-wrapper .fa{
                 font-size: 2rem;
                 margin-bottom: 1rem;
-                -webkit-animation: fa-spin-preload 1.5s infinite linear;
-		        animation: fa-spin-preload 1.5s infinite linear;
+                -webkit-animation: fa-spin 1.5s infinite linear;
+		        animation: fa-spin 1.5s infinite linear;
             }
-            @-webkit-keyframes fa-spin-preload {
+            @-webkit-keyframes fa-spin {
                 0% {
                     -webkit-transform: rotate(0deg);
                     transform: rotate(0deg);
