--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -50,7 +50,7 @@
 								   target="_blank"
 								   data-method="delete"
 								   data-file-name="{{../this.name}}"
-								   data-file-path="{{../this.path}}">
+								   data-file-key="{{../this.path}}">
 									<i class="fa fa-trash-o pull-right"></i>
 								</a>
                                 {{/userHasPermission}}
