--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -2,16 +2,36 @@
 @import './bootstrap/scss/bootstrap-flex';
 @import "./editor";
 
-body {
-    background: white !important;
-    overflow: hidden;
-    white-space: nowrap;
-    font-size: 0 !important;
+.preload-screen{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999999;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    color: #b10438;
+    transition: opacity .2s ease-in .3s;
+    &.hidden{
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+    .center-wrapper{
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        .fa{
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            -webkit-animation: fa-spin 1.5s infinite linear;
+            animation: fa-spin 1.5s infinite linear;
+        }
+    }
 }
-body > * {
-    font-size: 1rem;
-    white-space: normal;
-}
+
 .navtooltips{
     display: none;
     @include media-breakpoint-down(md) {
@@ -22,24 +42,6 @@ body > * {
     }
 }
 aside.nav-sidebar {
-    color: #727272;
-    display: inline-block;
-    width: 240px;
-    height: 100vh;
-    margin: 0;
-    background-color: #c3c1c1;
-    vertical-align: top;
-
-    @include media-breakpoint-down(md) {
-        width: 60px;
-    }
-
-    @include media-breakpoint-down(xs) {
-        width: 100%;
-        height: 0;
-        display: block;
-    }
-
     .sc-branding {
         display: block;
         padding: 15px;
@@ -252,21 +254,6 @@ header {
 }
 
 .content-wrapper {
-    position: relative;
-    display: inline-block;
-    width: calc(100vw - 240px);
-    height: 100vh;
-    overflow: auto;
-    padding: 0;
-
-    @include media-breakpoint-down(md) {
-        width: calc(100vw - 60px);
-    }
-
-    @include media-breakpoint-down(xs) {
-        width: 100vw;
-    }
-
     .school-data {
         padding-top: 11px;
     }
