--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -2,6 +2,7 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/loggedin.css"/>
         <link rel="stylesheet" href="/styles/lib/feedback-button.css"/>
+        <style>{{{@root.criticalLogedinCss}}}</style>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -28,6 +29,12 @@
     {{/content}}
 
     {{#content "body"}}
+        <div class="preload-screen hidden">
+            <div class="center-wrapper">
+                <i class="fa fa-spinner" aria-hidden="true"></i>
+                <p>laden...</p>
+            </div>
+        </div>
         <div class="navtooltips"></div>
         <aside class="nav-sidebar hide-inline">
             <nav>
