--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -70,13 +70,12 @@
         mit verfügbarem digitalen Lernmaterial aus der Schul-Cloud und dem Erkenntnisgewinn über die digitale
         Unterrichtsgestaltung
         mit der Schul-Cloud ist eine externe bildungswissenschaftliche Begleitung beauftragt. Zum einen führt die
-        <a href="https://osf.io/bzu4t/?view_only=14ad7519b5a24af7a83cf40b43377142">Universität Tübingen</a> eine
-        wissenschaftliche
+        <a href="https://osf.io/bzu4t/?view_only=14ad7519b5a24af7a83cf40b43377142" target="_blank">Universität Tübingen</a> eine wissenschaftliche
         Befragung der Pilotschulen zu Potenzialen der Schul-Cloud durch. Zum anderen gestaltet das
-        <a href="http://www.gei.de/abteilungen/schulbuch-als-medium/schools-in-the-cloud-wissenschaftliche-begleitforschung-der-schul-cloud-einfuehrung.html">Georg-Eckert-Institut</a>
-        aufbauend auf den Ergebnissen von Unterrichtsbeobachtungen und Workshops mit den Pilotschulen ein
-        Nutzungskonzept für
-        die pädagogisch-didaktisch sinnvolle Anwendung der Schul-Cloud.</p>
+       <a href="http://www.gei.de/abteilungen/schulbuch-als-medium/schools-in-the-cloud-wissenschaftliche-begleitforschung-der-schul-cloud-einfuehrung.html" target="_blank">Georg-Eckert-Institut</a>
+       aufbauend auf den Ergebnissen von Unterrichtsbeobachtungen und Workshops mit den Pilotschulen ein
+       Nutzungskonzept für die pädagogisch-didaktisch sinnvolle Anwendung der Schul-Cloud. Außerdem hat das HPI zusammen mit der <a href="https://www.presse.uni-augsburg.de/unipressedienst/2018/jan-maerz/2018_003/" target="_blank">Universität Augsburg</a> 
+       einen MOOC zu dem Thema <a href="https://mooc.house/courses/lernen40-2018" target="_blank">Lernen 4.0 - Möglichkeiten und Grenzen einer Digitalisierung im Bildungsbereich</a> durchgeführt.</p>
     <br/>
     <h4>Veröffentlichungen</h4>
     <br/>
