Add modal to show all members of course. Preview showed by tooltip.

--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -123,7 +123,6 @@
             color: $primaryColor;
             border: none;
             border-radius: 2px;
-            min-width: 64px;
             padding: 0 8px;
             display: inline-block;
             font-size: 14px;
@@ -135,6 +134,9 @@
             &:hover {
                 background-color: #eee;
             }
+        }
+        .additionalInfo {
+            float:left;
         }
     }
      &:hover{
