--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -37,5 +37,10 @@
     </div>
     <div class="sc-card-footer">
         <a href="{{url}}" rel="canonical">{{{link-text}}}</a>
+        {{#if additionalInfoName}}
+            <div class="additionalInfo" >
+                {{> (concat 'lib/sc-card_additionalInfo/' additionalInfoName) }}
+            </div>
+        {{/if}}
     </div>
 </article>
