--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -146,3 +146,12 @@
         }
     }
 }
+
+#member-modal-body{
+    padding-top: 10px;
+    columns: 3;
+    li{
+        padding: 0px;
+        margin: 0px;
+    }
+}
