--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -1,7 +1,7 @@
 <footer class="hide-inline small-footer">
     <div class="imprint">
         <div class="center">
-            <img src="/images/footer-logo.png"/>
+            <noscript class="lazyload"><img src="/images/footer-logo.png"/></noscript>
             <a>&copy; 2018 Schul-Cloud </a>
 
             <div>
