--- a/static/styles/lib/base.critical.scss
+++ b/static/styles/lib/base.critical.scss
@@ -2,6 +2,9 @@
 @import "./fontawesome/font-awesome";
 
 * {
+    /* This value replaces fallback when font has loaded */
+    font-display: swap;
+
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     hyphens: auto;
