--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="/styles/homework/homework.css"/>
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
     {{/content}}
+    {{#content "critical-styles" mode="append"}}
+        {{{inline "/styles/courses/course-detail.critical.css"}}}
+    {{/content}}
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
