--- a/views/homework/discussion.hbs
+++ b/views/homework/discussion.hbs
@@ -1,3 +1,6 @@
+{{#content "styles" mode="append"}}
+    <link rel="stylesheet" href="/styles/homework/discussions.css"/>
+{{/content}}
 <section id="discussion" class="tab-content section-homeworkdetails">
     <div class="col-md-8 offset-md-2 col-lg-12 offset-lg-0">
         <div class="alert alert-danger">
