--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -1,3 +1,6 @@
+{{#content "styles" mode="append"}}
+    <link rel="stylesheet" href="/styles/homework/submissions.css"/>
+{{/content}}
 <section id="submissions" class="tab-content section-homeworksubmissions">
     <table class="table table-hover">
         {{#if teamSubmissions}}
