--- a/static/styles/lib/components/layout.scss
+++ b/static/styles/lib/components/layout.scss
@@ -1,5 +1,5 @@
-@import "./bootstrap/scss/_variables";
-@import "./bootstrap/scss/mixins/_breakpoints";
+@import "../bootstrap/scss/_variables";
+@import "../bootstrap/scss/mixins/_breakpoints";
 
 body{
     background: white !important;
