--- a/static/styles/lib/components/sidebar.scss
+++ b/static/styles/lib/components/sidebar.scss
@@ -1,5 +1,6 @@
-@import "./bootstrap/scss/_variables";
-@import "./bootstrap/scss/mixins/_breakpoints";
+@import '../colors';
+@import "../bootstrap/scss/_variables";
+@import "../bootstrap/scss/mixins/_breakpoints";
 
 aside.nav-sidebar {
     color: #727272;
