--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -3,6 +3,9 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/dashboard/dashboard.css"/>
     {{/content}}
+    {{#content "critical-styles" mode="append"}}
+        {{{inline "/styles/dashboard/dashboard.critical.css"}}}
+    {{/content}}
 
     {{#content "scripts" mode="append"}}
 
