--- a/static/fonts/ptsans/ptsans.css
+++ b/static/fonts/ptsans/ptsans.css
@@ -4,6 +4,7 @@
 			url('ptsans-regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
 			url('ptsans-italic.woff') format('woff');
 	font-weight: normal;
 	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
 			url('ptsans-bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -28,5 +31,6 @@
 			url('ptsans-bold-italic.woff') format('woff');
 	font-weight: bold;
 	font-style: italic;
+	font-display: swap;
 }
 
