--- a/static/styles/lib/bootstrap/scss/_custom.scss
+++ b/static/styles/lib/bootstrap/scss/_custom.scss
@@ -145,7 +145,7 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: 'PT Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;;
+$font-family-sans-serif: 'PT Sans', "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;;
 $font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
