extracted critical admin css + small ui changes

--- a/static/styles/lib/loggedin.critical.scss
+++ b/static/styles/lib/loggedin.critical.scss
@@ -31,7 +31,6 @@
             line-height: 50px;
             text-align: center;
             cursor: pointer;
-
         }
 
         @include media-breakpoint-down(xs) {
@@ -61,4 +60,8 @@
             }
         }
     }
+}
+.pagination-wrapper {
+    text-align: center;
+    width: 100%;
 }
