--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -2,6 +2,9 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/administration/school.css"/>
     {{/content}}
+    {{#content "critical-styles" mode="append"}}
+        {{{inline "/styles/administration/school.critical.css"}}}
+    {{/content}}
 
     {{#content "page"}}
         <div class="route-administration">
