--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -2,6 +2,10 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
     {{/content}}
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/filter/custom-element-polyfill.js" defer></script>
+        <script src="/scripts/filter/feathers-filter.js" defer></script>
+    {{/content}}
     {{#content "page"}}
         <div class="route-administration">
             <section class="section-school section-default">
