extracted guest pages critical css

--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="/styles/about/about.css"/>
     {{/content}}
 
+    {{#content "critical-styles" mode="append"}}
+        {{{inline "/styles/authentication/home.critical.css"}}}
+        header a[href='/about']{
+            background-color: #f8a41b;
+        }
+    {{/content}}
+
     {{#content "scripts" mode="append"}} 
         <script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
     {{/content}}
