--- a/views/community/community_guest.hbs
+++ b/views/community/community_guest.hbs
@@ -3,6 +3,12 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
     {{/content}}
+    {{#content "critical-styles" mode="append"}}
+        {{{inline "/styles/authentication/home.critical.css"}}}
+        header a[href='/community']{
+            background-color: #f8a41b;
+        }
+    {{/content}}
 
     {{#content "scripts" mode="append"}}
     {{/content}}
