--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -2,6 +2,17 @@
 @import './bootstrap/scss/bootstrap-flex';
 @import "./editor";
 
+body {
+    background: white !important;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 0 !important;
+}
+body > * {
+    font-size: 1rem;
+    white-space: normal;
+}
+
 .preload-screen{
     position: fixed;
     top: 0;
@@ -42,6 +53,23 @@
     }
 }
 aside.nav-sidebar {
+    color: #727272;
+    display: inline-block;
+    width: 240px;
+    height: 100vh;
+    margin: 0;
+    background-color: #c3c1c1;
+
+    @include media-breakpoint-down(md) {
+        width: 60px;
+    }
+
+    @include media-breakpoint-down(xs) {
+        width: 100%;
+        height: 0;
+        display: block;
+    }
+
     .sc-branding {
         display: block;
         padding: 15px;
@@ -255,6 +283,20 @@ header {
 }
 
 .content-wrapper {
+    position: relative;
+    display: inline-block;
+    width: calc(100vw - 240px);
+    height: 100vh;
+    overflow: auto;
+    padding: 0;
+
+    @include media-breakpoint-down(md) {
+        width: calc(100vw - 60px);
+    }
+
+    @include media-breakpoint-down(xs) {
+        width: 100vw;
+    
     .school-data {
         padding-top: 11px;
     }
