--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -3,6 +3,12 @@
         <link rel="stylesheet" href="/styles/lib/loggedin.css"/>
         <link rel="stylesheet" href="/styles/lib/feedback-button.css"/>
         <link rel="stylesheet" href="/vendor/introjs/introjs.min.css"/>
+        {{#if nightwatch}}
+        <style>
+            body{overflow: auto !important;}
+            .content-wrapper{height: auto !important;}
+            </style>
+        {{/if}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
