userstory for student
autoformatted bootstrap.min.js,
corrected a typo,
enabled User Stories for Students.
"User Story eingeben" and "problem melden" buttons currently not working

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -161,7 +161,7 @@
                             </div>
                         </li>
 
-                        <li class="nav-item help-drodown" data-step="5" data-intro="Hilfebereich für Ihre Fragen und Probleme">
+                        <li class="nav-item help-dropdown" data-step="5" data-intro="Hilfebereich für Ihre Fragen und Probleme">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-question"></i>
@@ -177,11 +177,11 @@
                                                                                                     aria-hidden="true"></i><a
                                                 href="https://blog.schul-cloud.org/faq/" target="_blank" class="link">FAQ</a></span></li>
                                         <div class="delimiter"></div>
-                                        {{#ifneq this.currentRole "Schüler"}}
+                                        
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-pencil"
                                                                                                     aria-hidden="true"></i></i>
                                             <a href="#" class="link submit-helpdesk">Eine User-Story eingeben</a></span></li>
-                                        {{/ifneq}}
+                                        
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-comment"
                                                                                                     aria-hidden="true"></i></i>
                                             <a href="#" class="link submit-problem">Ein Problem melden</a></span></li>
