--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -177,11 +177,11 @@
                                                                                                     aria-hidden="true"></i><a
                                                 href="https://blog.schul-cloud.org/faq/" target="_blank" class="link">FAQ</a></span></li>
                                         <div class="delimiter"></div>
-                                        
+                                        {{#ifneq this.currentRole "Schüler"}}
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-pencil"
                                                                                                     aria-hidden="true"></i></i>
                                             <a href="#" class="link submit-helpdesk">Eine User-Story eingeben</a></span></li>
-                                        
+                                        {{/ifneq}}
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-comment"
                                                                                                     aria-hidden="true"></i></i>
                                             <a href="#" class="link submit-problem">Ein Problem melden</a></span></li>
