--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -15,30 +15,70 @@ body > * {
 
 .preload-screen{
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     z-index: 99999999;
     width: 100vw;
     height: 100vh;
-    background-color: #fff;
-    color: #b10438;
-    transition: opacity .2s ease-in .3s;
-    &.hidden{
-        opacity: 0;
-        width: 0;
-        height: 0;
+    overflow: hidden;
+    .overlay-card{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 200vmax;
+        height: 200vmax;
+        transform-origin: 0 100%;
+        transition-property: transform;
+        transition-timing-function: ease-in;
+        will-change: transform;
+        &:nth-of-type(1){
+            background-color: #fee1b5;
+            transition-delay: .5s;
+            transition-duration: .6s;
+        }
+        &:nth-of-type(2){
+            background-color: #fed599;
+            transition-delay: .8s;
+            transition-duration: .5s;
+        }
+        &:nth-of-type(3){
+            background-color: #fdbd6d;
+            transition-delay: 1.0s;
+            transition-duration: .4s;
+        }
     }
-    .center-wrapper{
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        .fa{
-            font-size: 2rem;
-            margin-bottom: 1rem;
-            -webkit-animation: fa-spin 1.5s infinite linear;
-            animation: fa-spin 1.5s infinite linear;
+    .content{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background: radial-gradient(farthest-corner, transparent 45%, rgba(217, 140, 6, .5));
+        transition: opacity .3s ease-in-out 1.3s;
+        text-shadow: 2px 2px 5px rgba(0,0,0,.3);
+        .center-wrapper{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: #fff;
+            font-size: 1.2rem;
+            .fa{
+                font-size: 2em;
+                margin-bottom: 1rem;
+                -webkit-animation: fa-spin 1.5s infinite linear;
+                animation: fa-spin 1.5s infinite linear;
+            }
+        }
+    }
+    &.hidden{
+        visibility: hidden;
+        .overlay-card{
+            transform: rotate(-90deg);
+        }
+        .content{
+            opacity: 0;
         }
     }
 }
