--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -44,9 +44,14 @@
 
     {{#content "body"}}
         <div class="preload-screen hidden">
-            <div class="center-wrapper">
-                <i class="fa fa-spinner" aria-hidden="true"></i>
-                <p>laden...</p>
+            <div class="overlay-card"></div>
+            <div class="overlay-card"></div>
+            <div class="overlay-card"></div>
+            <div class="content">
+                <div class="center-wrapper">
+                    <i class="fa fa-spinner" aria-hidden="true"></i>
+                    <p>laden...</p>
+                </div>
             </div>
         </div>
         <div class="navtooltips"></div>
